--- a/package.json
+++ b/package.json
@@ -4,19 +4,30 @@
   "description": "music player server",
   "main": "index.js",
   "scripts": {
-    "dev": "tsnd --respawn --pretty --transpile-only ./src/index.ts"
+    "dev": "tsnd --respawn -r tsconfig-paths/register --pretty --transpile-only ./src/index.ts",
+    "build": "tsc && tsc-alias"
   },
   "keywords": [],
   "author": "rasimul",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "dotenv": "^16.4.4",
     "express": "^4.18.2",
-    "tsc": "^2.0.4"
+    "mongoose": "^8.1.2",
+    "nodemailer": "^6.9.9",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^20.11.19",
+    "@types/nodemailer": "^6.4.14",
     "ts-node-dev": "^2.0.0",
+    "tsc-alias": "^1.8.8",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.3.3"
   }
 }
