--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "author": "rasimul",
   "license": "ISC",
   "dependencies": {
+    "@types/formidable": "^3.4.5",
     "bcrypt": "^5.1.1",
+    "cloudinary": "^2.0.1",
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
+    "formidable": "^3.5.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.2",
     "nodemailer": "^6.9.9",
